Wed Oct 13 22:20:17 CEST 2004 (tk)
----------------------------------
  * libclamav/str.c: include cli_strtokbuf() from Nigel

Wed Oct 13 20:21:26 CEST 2004 (tk)
----------------------------------
  * libclamav/mspack/cabd.c: fix possible description leak

Wed Oct 13 11:19:03 BST 2004 (njh)
----------------------------------
  * libclamav/untar.c:	Added handling of some extra file types within the
				archive. Thanks to
				djgardner*users.sourceforge.net

Wed Oct 13 09:57:54 BST 2004 (trog)
-----------------------------------
  * libclamav/special.c: fix logic check

Mon Oct 11 11:56:29 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Find worms such as Worm.Bagz.B-2 which include
			non base64 characters in their encodings

Mon Oct 11 04:07:41 CEST 2004 (tk)
----------------------------------
  * clamd: improve on-access scanning
  * docs: update
  V 0.80rc4

Sun Oct 10 12:11:31 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Replace (commented out) perror calls with cli_errmsg

Sun Oct 10 01:12:04 CEST 2004 (tk)
----------------------------------
  * configure: check libcurl's version number
  * clamd/others.c: fix compilation error on Solaris (thanks to "Christopher
		    X. Candreva" <chris*westnet.com>)
  * freshclam: display additional info for "SECURITY WARNING: NO SUPPORT..."
	       (requested by Kevin Spicer <kevins*bmrb.co.uk>)

Sat Oct  9 23:11:35 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Correct fix for systems where BINDTODEVICE is not
				supported
			SESSIONS: If the PORT command to clamd fails, reset the
				link

Sat Oct  9 09:03:21 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Only use libcurl if the version is >= 7.11

Sat Oct  9 03:07:35 CEST 2004 (tk)
----------------------------------
  * libclamav/readdb.c: make signature parser more elastic

Fri Oct  8 17:53:30 CEST 2004 (tk)
----------------------------------